# agentic-research-rag

./: .gitignore  README.md  TO-DO  docker-compose.yml  memory.txt  t.txt
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  e.nv.example.txt  pyproject.toml  railway.json  refactor.py  requirements.txt  run_backend.bat  run_backend.ps1  scratch_check_env.py  test_api.py  test_db.py  test_discovery_data.py  test_langfuse.py  test_mftool.py
backend/alembic/: env.py
backend/alembic/versions/: 32c538358a05_initial.py  9a5a0df793af_add_hnsw_index.py
backend/app/: main.py
backend/app/api/: chat.py  documents.py
backend/app/core/: config.py  llm_clients.py
backend/app/db/: connection.py  models.py
backend/app/models/: schemas.py
backend/app/repositories/: embedding_repo.py  message_repo.py  session_repo.py
backend/app/services/: agent_models.py  agent_tools.py  capabilities.py  dateHelper.py  document_processor.py  embeddings.py  faiss_service.py  fund_resolver.py  history_service.py  ingest_pipeline.py  injest.py  langchain_agents.py  llm.py  mf_instance.py  pdr.py  prompts.py  qdrant_service.py  rag_pipeline.py  response_parser.py  router.py  smart_questions.py  structured_out.md
backend/artifacts/: tool_test_results.md
backend/models/onnx/: config.json  model.onnx
backend/scripts/: export_onnx.py  inspect_mf.py  test_agent_tools.py
backend/tests/: conftest.py  test_basic.py  test_calculator_tools.py  test_discovery_tools.py  test_document_tools.py  test_nav_tools.py  test_performance_tools.py  test_tool_contracts.py
backend/tests/fixtures/: mock_nav_data.py  mock_performance_data.py  mock_rag_data.py  mock_scheme_data.py
frontend/: BUILD_PROGRESS.md  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.config.ts  app.ts
frontend/src/app/components/app-shell/: app-shell.component.css  app-shell.component.html  app-shell.component.ts
frontend/src/app/components/chat-header/: chat-header.component.html  chat-header.component.ts
frontend/src/app/components/chat-input/: chat-input.component.css  chat-input.component.html  chat-input.component.ts
frontend/src/app/components/chat-panel/: chat-panel.component.css  chat-panel.component.html  chat-panel.component.ts
frontend/src/app/components/chunk-item/: chunk-item.component.css  chunk-item.component.html  chunk-item.component.ts
frontend/src/app/components/citations/: citations.component.html  citations.component.ts
frontend/src/app/components/knowledge/: knowledge.component.css  knowledge.component.html  knowledge.component.ts
frontend/src/app/components/left-panel/: left-panel.component.css  left-panel.component.html  left-panel.component.ts
frontend/src/app/components/message-item/: message-item.component.css  message-item.component.html  message-item.component.ts
frontend/src/app/components/message-list/: message-list.component.css  message-list.component.html  message-list.component.ts
frontend/src/app/components/right-panel/: right-panel.component.css  right-panel.component.html  right-panel.component.ts
frontend/src/app/components/source-item/: source-item.component.css  source-item.component.html  source-item.component.ts
frontend/src/app/components/structured-response/: structured-response.component.ts  structured-response.html  structured-response.ts
frontend/src/app/models/: chat.models.ts
frontend/src/app/services/: chat-history.service.ts  chat.service.ts  document.service.ts  ui-state.service.ts
frontend/src/environments/: environment.ts
